# image-processor

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  USAGE.md  makefile  pyproject.toml  run_tests.py
examples/: spritesheet_example.py
frontend/: package-lock.json
frontend/src/app/: page.tsx
frontend/src/app/pipeline/: page.tsx
frontend/src/app/spritesheet/: page.tsx
frontend/src/lib/: api.ts
sprite-processor/: USAGE.md  makefile  pyproject.toml
sprite-processor-backup/: Dockerfile  USAGE.md  requirements-test.txt
sprite-processor-backup/frontend/: package.json  tsconfig.tsbuildinfo
sprite-processor-backup/src/sprite_processor/: api.py  video.py
sprite-processor-backup/src/sprite_processor.egg-info/: top_level.txt
sprite-processor-backup/tests/: README.md  conftest.py  test_api.py  test_core.py  test_pipeline.py  test_remove.py  test_video.py
sprite-processor/frontend/: package-lock.json  tsconfig.tsbuildinfo
sprite-processor/frontend/src/app/: layout.tsx  page.tsx
sprite-processor/frontend/src/app/gif-to-spritesheet/: page.tsx
sprite-processor/frontend/src/app/projects/: page.tsx
sprite-processor/frontend/src/app/upload/: page.tsx
sprite-processor/frontend/src/app/video/: page.tsx
sprite-processor/frontend/src/components/layout/: Header.tsx
sprite-processor/frontend/src/components/upload/: ProcessingStatus.tsx
sprite-processor/frontend/src/lib/: api.ts
sprite-processor/src/sprite_processor/: __init__.py  api.py  cli.py  pipeline.py  video.py
sprite-processor/src/sprite_processor.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
sprite-processor/tests/: test_pipeline.py  test_video.py
src/bgremove/: __init__.py  api.py  cli.py
src/bgremove.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sprite_processor/: __init__.py  api.py  api_refactored.py  api_utils.py  cli.py  model_utils.py  pipeline.py  spritesheet_utils.py  video.py
src/sprite_processor.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  test_api.py  test_cli.py  test_core.py  test_integration.py  test_pipeline.py  test_remove.py  test_video.py
(+18 files in other folders)
